# qre

./: .gitignore  NOTES.md  README.md  discord_agent.py  pyproject.toml  run.sh
.claude/agents/: autonomous-optimizer.md
.github/workflows/: test.yml
scripts/: compare_signals.py  compare_stops.py  export_params.py  gen_art_run_portrait.py  gen_art_time_iris.py  gen_art_trial_flow_field.py  regenerate_reports.py
src/qre/: __init__.py  analyze.py  autonomous.py  config.py  io.py  monitor.py  notify.py  optimize.py  penalties.py  report.py
src/qre/core/: __init__.py  backtest.py  indicators.py  metrics.py  strategy.py
src/qre/data/: fetch.py
src/qre/hooks/: __init__.py  auto_diagnose.py
tests/: conftest.py  test_export_params.py
tests/fixtures/golden_baseline/BTC/: best_params.json  trades_BTC_USDC_1h_FULL.csv
tests/integration/: test_golden_baseline.py  test_pipeline.py  test_reproducibility.py  test_v4_backward_compat.py
tests/unit/: test_allow_flip.py  test_analyze.py  test_autonomous.py  test_backtest.py  test_config.py  test_data_fetch.py  test_hooks.py  test_indicators.py  test_io.py  test_metrics.py  test_monitor.py  test_notify.py  test_optimize.py  test_penalties.py  test_report.py  test_strategy.py  test_vectorized_signals.py
